--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4",
-        "maatwebsite/excel": "~2.1.0"
+        "maatwebsite/excel": "~2.1.0",
+        "fzaninotto/faker": "~1.4",
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
