--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4",
         "maatwebsite/excel": "~2.1.0",
-        "fzaninotto/faker": "~1.4",
+        "fzaninotto/faker": "~1.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
