--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_ENV=local
+APP_ENV=production  
 APP_KEY=base64:Ti7Ju/FjKeZn2TZCPfbpjFEXh0j1qlaEIw3rfk1cDSY=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=https://smpshop.herokuapp.com/
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
