--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_ENV=production
 APP_KEY=base64:Ti7Ju/FjKeZn2TZCPfbpjFEXh0j1qlaEIw3rfk1cDSY=
 APP_DEBUG=false
 APP_LOG_LEVEL=debug
-APP_URL=https://smpshop.herokuapp.com/
+APP_URL=http://smpshop.herokuapp.com/
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
