--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,11 @@
     <IfModule mod_negotiation.c>
         Options -MultiViews
     </IfModule>
-
+    <IfModule mod_rewrite.c>
+       RewriteEngine on
+       RewriteRule    ^$ public/    [L]
+       RewriteRule    (.*) public/$1 [L]
+    </IfModule>
     RewriteEngine On
 
     # Redirect Trailing Slashes If Not A Folder...
